<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_700"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_big"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/margin_medium"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/imageContact"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_medium">

                <TextView
                    android:id="@+id/textUserName"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little" />

                <TextView
                    android:id="@+id/textEmail"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little" />

                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little" />

                <TextView
                    android:id="@+id/textPhone"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little" />

                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDownloadImg"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_image"
                android:drawableLeft="@android:drawable/ic_menu_save"/>

            <Button
                android:id="@+id/buttonSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_normal"
                android:drawableLeft="@android:drawable/ic_menu_send"/>

            <Button
                android:id="@+id/buttonCallPhone"
                android:text="@string/call"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@android:drawable/ic_menu_call"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>